robot Adding: [[chr:ᎡᎵᏏᎯ]]

--- a/Phandlo_Thagaripen_la_Bare_Britaniyako_thai_le_Nordutne_Irlandesko.mw
+++ b/Phandlo_Thagaripen_la_Bare_Britaniyako_thai_le_Nordutne_Irlandesko.mw
@@ -107,6 +107,7 @@ O '''Phandlo Thagaripen la Bari Britaniyako thai le Nordutne Irlandesko''' ([[an
 [[cdo:Ĭng-guók]]
 [[ce:Великобритани]]
 [[ceb:Hiniusang Gingharian]]
+[[chr:ᎡᎵᏏᎯ]]
 [[co:Regnu Unitu]]
 [[crh:Büyük Britaniya]]
 [[cs:Spojené království]]
