--- a/Spaniya.mw
+++ b/Spaniya.mw
@@ -13,6 +13,8 @@ E '''Spaniya''' vai O '''Thagaripen Spaniyako''' ([[spanyolikanes]]: ''España''
 == Manushanipen ==
 
 == Sanskrtipen ==
+
+{{Commons|Spain}}
 {{EE thema thai zumavde}}
 {{Europa}}
 
