--- a/Spaniya.mw
+++ b/Spaniya.mw
@@ -14,7 +14,7 @@ E '''Spaniya''' vai O '''Thagaripen Spaniyako''' ([[spanyolikanes]]: ''España''
 
 == Sanskrtipen ==
 
-{{Commons|Spain}}
+* [http://commons.wikimedia.org/wiki/Category:Spain Commons]
 {{EE thema thai zumavde}}
 {{Europa}}
 
