--- a/Bari_Britaniya.mw
+++ b/Bari_Britaniya.mw
@@ -43,6 +43,7 @@ Lako baripen si 218 595 km², kerindoi la o bareder dvip andar le [[Britanikane 
 [[ga:An Bhreatain]]
 [[gd:Breatainn Mhòr]]
 [[gl:Gran Bretaña - Great Britain]]
+[[gv:Yn Vretyn Vooar]]
 [[he:בריטניה הגדולה]]
 [[hr:Velika Britanija (otok)]]
 [[hu:Brit-sziget]]
