robot Modifying: [[ar:القمر]]

--- a/Chhon_(chereski).mw
+++ b/Chhon_(chereski).mw
@@ -174,7 +174,7 @@ I '''Chhon''' si o korkoro satelito la [[Phuv]]yaki.
 [[am:ጨረቃ]]
 [[an:Luna]]
 [[ang:Mōna]]
-[[ar:قمر (توضيح)]]
+[[ar:القمر]]
 [[arc:ܣܗܪܐ]]
 [[arz:قمر]]
 [[ast:Lluna]]
