--- a/Kham.mw
+++ b/Kham.mw
@@ -128,8 +128,7 @@
 
 O '''Kham''' si i [[chexai]] kai o mashkar le amare [[khamutno sistemo]]sko. I [[Phuv]] thai aver [[planet]]urya truyaren les.
 
-
-[[Kategoriya:Chexanipen]]
+<references/>
 
 {{Link FA|ru}}
 {{Link FA|tr}}
