robot Modifying: [[ce:СалоцӀе]]

--- a/Kham.mw
+++ b/Kham.mw
@@ -159,7 +159,7 @@ O '''Kham''' si i [[chexai]] kai o mashkar le amare [[khamutno sistemo]]sko. I [
 [[bs:Sunce]]
 [[ca:Sol]]
 [[cdo:Nĭk-tàu]]
-[[ce:Салоцlе]]
+[[ce:СалоцӀе]]
 [[co:Soli]]
 [[cr:ᒌᔑᑳᐅᐲᓯᒻ]]
 [[cs:Slunce]]
