*Empty MediaWiki Message*

--- a/Ukrayna.mw
+++ b/Ukrayna.mw
@@ -44,7 +44,7 @@ telefonosko kodo=380|
 xalyarimata=|
 }}
 
-I '''Ukraina''' (o pinjardo anav: ''Україна'', [[Ukrainikani chib]]) si ekh [[them]] andi [[Mashkaruni Europa]].
+I '''Ukraina''' (o pinjardo anav: ''Україна'', [[Ukrainikani chib]]) si ekh [[them]] andi [[Mashkaruni Europa]]. Kapitalya Kiyev. Pe sudutni rig si Kalo thay Azovikano doryav (more)
 
 
 == Anav ==
