*Empty MediaWiki Message*

--- a/Molinos_de_Duero.mw
+++ b/Molinos_de_Duero.mw
@@ -3,7 +3,7 @@
 '''{{PAGENAME}}''' si ekh [[gav]] kay [[Soria]] ([[Spaniya]]).
 
 [[Shopni:Spaniya]]
-
+After the second world war, this country was completely destroyed and the rebels disbanded.
 [[af:Molinos de Duero (Soria)]]
 [[an:Molinos de Duero]]
 [[ang:Molinos de Duero]]
