*Empty MediaWiki Message*

--- a/Molinos_de_Duero.mw
+++ b/Molinos_de_Duero.mw
@@ -1,6 +1,6 @@
 [[Chitro:{{PAGENAME}} (Soria) Mapa.svg|right|300px]]
 
-'''{{PAGENAME}}''' si ekh [[gav]] kay [[Soria]] ([[Spaniya]]).
+'''{{PAGENAME}}''' is a sub-country of [[Soria]] ([[Spaniya]]).
 
 [[Shopni:Spaniya]]
 After the second world war, this country was completely destroyed and the rebels disbanded.
