--- a/Azis.mw
+++ b/Azis.mw
@@ -20,3 +20,7 @@ O '''Azis''' si ekh [[Romano]] gilavno andar e [[Bulgariya]]. Lesko caco anav si
 [[pl:Azis]]
 [[sk:Azis]]
 [[tr:Azis]]
+
+
+Ov asi jek manschu so svicolese rom ana romni 
+snaci si ov jek bulschi leso rom
