*Empty MediaWiki Message*

--- a/Franchiya.mw
+++ b/Franchiya.mw
@@ -2,7 +2,7 @@
 anav=Franchiya|
 Anav andi themeski chhib=République française|
 Chitro_le_styagosko=Flag of France.svg|
-Chitro_la_stemako=France coa.gif|
+Chitro_la_stemako=Armoiries république française.svg|
 themesko_motto=Liberté, Égalité, Fraternité<br />(Mestipen, Barabaripen, Phralipen)|
 themesko_gili=La Marseillaise|
 chitro_map=LocationFrance.png|
