*Empty MediaWiki Message*

--- a/Katovice.mw
+++ b/Katovice.mw
@@ -2,7 +2,7 @@
 
 {{MoxtonForo|
 |anav le forosko=''Katowice''<br />
-|stema=Katowice_coa.png
+|stema=Katowice Herb.svg
 |mapa=Katowice_location_in_Poland.png
 |rendaripen=lat. 50°15' N long. 19°00' E
 |them=Polska
