--- a/Anton_Pan.mw
+++ b/Anton_Pan.mw
@@ -1,4 +1,4 @@
-[[Chitro:Anton Pan.gif|thumb|200px|Anton Pan]]
+[[File:AntonPann.jpg|thumb|200px|Anton Pan]]
 
 O '''Anton Pan''' ([[1790]]ko [[deshbersh]], [[Sliven]], [[Otomano Thagaripen]] - [[2 Novembra]] [[1854]] [[Bukureshti]], [[Valaxiya]]) sas ekh [[Romano]] lekhavno thai gilavno andar o nyamo [[Kǎldǎrar]].
 
