*Empty MediaWiki Message*

--- a/Latviya.mw
+++ b/Latviya.mw
@@ -2,7 +2,7 @@
 anav=Latviya|
 Anav andi themeski chhib=Latvijas Republika|
 Chitro_le_styagosko=Flag of Latvia.svg|
-Chitro_la_stemako=Latvijas lielais gerbonis.png|
+Chitro_la_stemako=Coat of Arms of Latvia.svg|
 themesko_motto=Tēvzemei un Brīvībai|
 themesko_himno=Dievs, svētī Latviju!|
 chitro_map=LocationLatvia.png|
