--- a/Bulgariya.mw
+++ b/Bulgariya.mw
@@ -2,7 +2,7 @@
 anav=Bulgariya|
 Anav andi themeski chhib=Република България<br />Republika Balgariya|
 Chitro_le_styagosko=Flag of Bulgaria.svg|
-Chitro_la_stemako=BGgerb2.gif|
+Chitro_la_stemako=Coat of arms of Bulgaria.svg|
 themesko_motto=Съединението прави силата|
 themesko_himno=Mila Rodino|
 chitro_map=LocationBulgaria.png|
