--- a/Patrinipen_le_prinjarde_chhibango_andi_Pharatiya.mw
+++ b/Patrinipen_le_prinjarde_chhibango_andi_Pharatiya.mw
@@ -60,18 +60,17 @@ Kadala trin Bihari ćhiba si len buteder sar 5 milyonurya vakyarne, pal nai leng
 ==Avrutne phandimata==
 * [http://www.ciil.org/ Central Institute of Indian Languages] &ndash; Guvernamentesko site le but janglimatenca pe indikane ćhiba
 
+
 [[af:Lys van nasionale tale van Indië]]
 [[bn:ভারতের রাষ্ট্রভাষা]]
 [[br:Roll yezhoù ofisiel India]]
-[[ca:Llista de llengües de l'Índia]]
 [[da:Indiens nationale sprog]]
-[[de:Sprachen Indiens]]
+[[de:Amtssprache (Indien)]]
 [[en:Languages with official status in India]]
 [[eo:Naciaj lingvoj de Barato]]
 [[es:Anexo:Idiomas nacionales de la India]]
 [[eu:Indiako hizkuntza ofizialen zerrenda]]
 [[fi:Luettelo Intian kansallisista kielistä]]
-[[he:שפות רשמיות בהודו]]
 [[hi:भारत की आधिकारिक भाषाएँ]]
 [[ia:Lista del national linguas de India]]
 [[is:Listi yfir þjóðtungur Indlands]]
@@ -79,10 +78,6 @@ Kadala trin Bihari ćhiba si len buteder sar 5 milyonurya vakyarne, pal nai leng
 [[ja:インドの公用語の一覧]]
 [[la:Index linguarum sollemnium Indiae]]
 [[lt:Sąrašas:Oficialios Indijos kalbos]]
-[[ml:ഭാരതത്തിലെ ഔദ്യോഗിക ഭാഷകൾ]]
-[[mr:भारतीय भाषा]]
-[[nn:Språk i India]]
-[[no:Språk i India]]
 [[os:Индийы æвзæгты номхыгъд]]
 [[pl:Języki urzędowe Indii]]
 [[pt:Anexo:Lista de línguas nacionais da Índia]]
@@ -90,7 +85,3 @@ Kadala trin Bihari ćhiba si len buteder sar 5 milyonurya vakyarne, pal nai leng
 [[scn:Lista dî lingui ufficiali di l'Innia]]
 [[sl:Seznam uradnih jezikov Indije]]
 [[sv:Lista över Indiens officiella språk]]
-[[te:భారతదేశ అధికారిక భాషలు]]
-[[th:ภาษาราชการของอินเดีย]]
-[[tr:Hindistan'daki diller]]
-[[zh:印度国家语言列表]]
