--- a/Shtefan_Răzvan.mw
+++ b/Shtefan_Răzvan.mw
@@ -11,7 +11,7 @@ Lesko dad sas [[Xoraxano]] andar o [[Otomano Thagaripen]] thay leski day sas [[R
 [[Shopni:Rumuniyake Roma]]
 
 [[en:Ştefan Răzvan]]
-[[es:Ştefan Răzvan]]
+[[es:Esteban VIII de Moldavia]]
 [[fr:Ştefan VIII]]
 [[it:Ştefan Răzvan]]
 [[pl:Stefan Răzvan]]
