--- a/Bukureshti.mw
+++ b/Bukureshti.mw
@@ -21,7 +21,7 @@
 
 [[Chitro:Bancorex building bgiu.jpg|thumb|right|250px|Bukureshti]]
 
-'''Bukureshti''' ([[Rumunikani ćhib]]: ''Bucureşti'', [[Mediya:Ro-Bucureşti.ogg|{{IPA|/bu.ku'reʃtʲ/}}]]) si o sherutno foro vi o bareder foro la [[Rumuniya]]ko.
+'''Bukureshti''' ([[Rumunikani ćhib]]: ''București'', [[Mediya:Ro-București.ogg|{{IPA|/bu.ku'reʃtʲ/}}]]) si o sherutno foro vi o bareder foro la [[Rumuniya]]ko.
 
 [[Shopni:Rumuniyake forurya]]
 
