*Empty MediaWiki Message*

--- a/Arxentina.mw
+++ b/Arxentina.mw
@@ -1,4 +1,7 @@
+[[Chitro:Flag of Argentina.svg|thumb|right|420px|Arxentina]]
 E '''Republika Arxentin''' (Spaniyolikanes: República Argentina) si ekh them andi Suduni Amerika.
+
+{{stub}}
 
 [[ace:Argentina]]
 [[af:Argentinië]]
