--- a/Israel.mw
+++ b/Israel.mw
@@ -1,5 +1,5 @@
 [[Chitro:Flag of Israel.svg|thumb|right|420px|Israel]]
-E '''Them Israel''' ''(ebraikanes: Işrael / ישראל - Medinat Işrael / מדינת ישראל *arabikanes: Isra'il / اسرائيل - Daulat Isra'il / دولة اسرائيل)'' si ekh [[them]] andi [[Mashkarutni Asiya]].
+E '''Them Israel''' ''(ebraikanes: Yisra'el / ישראל - Medinat Yisra'el / מדינת ישראל *arabikanes: Isra'il / اسرائيل - Daulat Isra'il / دولة اسرائيل)'' si ekh [[them]] andi [[Mashkarutni Asiya]].
 
 {{stub}}
 
