--- a/Concepción.mw
+++ b/Concepción.mw
@@ -22,7 +22,7 @@
 
 == Dikh vi ==
 * [http://www.concepcion.cl Concepción municipality]
-* [http://commons.wikimedia.org/wiki/Category:Concepcion, Chile Commonscat]
+* [http://commons.wikimedia.org/wiki/Category:Concepcion,_Chile Commonscat]
 
 {{stub}}
 
