--- a/Concepción.mw
+++ b/Concepción.mw
@@ -20,6 +20,17 @@
 [[Chitro:Concepcion-Chile(001).jpg|350px|right|thumb|<center>'''Concepción'''</center>]]
 '''Concepción''' si yekh importanto [[Foro|foro]] ande [[Chile]]. Kathe jivisaren 216.061 manusha ([[2002]]). Manushego butvaripen: 975,0/km².
 
+<gallery perrow=4>
+File:Centronocheconce.jpg|
+File:Arco de Medicina UdeC.jpg|
+File:Moderno Edificio en Concepción.jpg|
+File:Desembocadura del Biobío.jpg|
+File:Ex Catedral de Concepción.jpg|
+File:Biobus01.jpg|
+File:Hotel El Araucano.JPG|
+File:Plaza de Armas Concepción.jpg|
+</gallery>
+
 == Dikh vi ==
 * [http://www.concepcion.cl Concepción municipality]
 * [http://commons.wikimedia.org/wiki/Category:Concepcion,_Chile Commonscat]
