--- a/Chib.mw
+++ b/Chib.mw
@@ -2,7 +2,7 @@
 
 Ekh chhib si ekh mashkar te tradel (bichhalel) janglimata mashkar manusha. Si labyardi sar i [[vakyardi chhib]] vi sar i [[lekhavdi chhib]].
 
-[[Shopni:Chhibavipen]]
+[[Shopni:Chhib]]
 
 [[af:Taal]]
 [[als:Sprache]]
