*Empty MediaWiki Message*

--- a/Gadjo_dilo.mw
+++ b/Gadjo_dilo.mw
@@ -1,4 +1,4 @@
-'''''Gadjo dilo''''' si o filmo katar 1997 le bershenge, direktisavajlo thaj skrivime katar o [[Tony Gatlif]]. <ref name="Strainul">Akardo rruminickones o filmo si "Străinul nebun" ("Avre themesko gazho dilo".</ref>
+'''''Gadjo dilo''''' si jekh filmo katar 1997 le bershenge, direktisavajlo thaj skrivime katar o [[Tony Gatlif]]. <ref name="Strainul">Akardo rruminickones o filmo si "Străinul nebun" ("Avre themesko gazho dilo".</ref>
 Avilo kerdo o maj le filmosko ando gav le [[Kreculeshti]], cyrra kilmometri katar o [[Bukareshti]], thaj cyrra le aktorja si lokalni [[Roma|Rroma]].
 ==Plano==
 
