*Empty MediaWiki Message*

--- a/Gadjo_dilo.mw
+++ b/Gadjo_dilo.mw
@@ -20,3 +20,10 @@ Ande [[Thessaloniki]], [[Grecija]], o filmo, kerdo pe grecicka sar "Gadjo Dilo: 
 <references/>
 
 [[Category:Filmo]]
+
+[[fr:Gadjo Dilo]]
+[[it:Gadjo dilo - Lo straniero pazzo]]
+[[ja:ガッジョ・ディーロ]]
+[[pl:Gadjo dilo]]
+[[ru:Странный чужак]]
+[[sv:Gadjo Dilo – främlingen]]
