*Empty MediaWiki Message*

--- a/Gadjo_dilo.mw
+++ b/Gadjo_dilo.mw
@@ -1,4 +1,4 @@
-'''''Gadjo dilo''''' si jekh filmo katar 1997 le bershenge, direktisavajlo thaj skrivime katar o [[Tony Gatlif]]. <ref name="Strainul">Akardo rruminickones o filmo si "Străinul nebun" ("Avre themesko gazho dilo".</ref>
+'''''Gadjo dilo''''' si jekh filmo katar o 1997to bersh, direktisavajlo thaj skrivime katar o [[Tony Gatlif]]. <ref name="Strainul">Akardo rruminickones o filmo si "Străinul nebun" ("Avre themesko gazho dilo".</ref>
 Avilo kerdo o maj le filmosko ando gav le [[Kreculeshti]], cyrra kilmometri katar o [[Bukareshti]], thaj cyrra le aktorja si lokalni [[Roma|Rroma]].
 ==Plano==
 
@@ -14,7 +14,7 @@ O Stéphane, jekh terno francuzo katar o Paridzhi, zhal kaj Rruminija. Rodel la 
 *[[Mónika Juhász Miczura]] del o glaso le Nora Lukako (bidikhli ando filmo).
 
 ==Nagradostija==
-Ande [[Thessaloniki]], [[Grecija]], o filmo, kerdo pe grecicka sar "Gadjo Dilo: There are still smiling gypsies" ("Aba si asamaste rroma" pe rromanes) dubisajlo o nagrada ando 41-to [[Thessaloniki Film Festival]] ando 1998 le bershenge.
+Ande [[Thessaloniki]], [[Grecija]], o filmo, kerdo pe grecicka sar "Gadjo Dilo: There are still smiling gypsies" ("Aba si asamaste rroma" pe rromanes) dubisajlo o nagrada ando 41-to [[Thessaloniki Film Festival]] ando 1998to bersh.
 
 ==Notes==
 <references/>
