*Empty MediaWiki Message*

--- a/Parno_Graszt.mw
+++ b/Parno_Graszt.mw
@@ -1,5 +1,5 @@
-'''Parno Graszt''' ekh muzikaki grupa katar [[Paszab]], ande [[Ungarija]], kerdjosavajli ande'l bershenge 1987.
-Lengo pervino albomo "Rávágok a zongorára/Hit the piano" avilo jekhali pe Lumnaki Muzkaki Karta ando Evropo ando oktombro 2002 le bershenge<ref>[http://www.passiondiscs.co.uk/e_pages/gypsy_e/fa-215-2.htm Parno Graszt]</ref>. Ungaricki Televizija thaj o BBC kerde ande'l bershenge 2004 ekh dokumentarija po Parno Graszt.<ref>[http://www.port.hu/parno_graszt:unnepek_es_hetkoznapok_parno_grast:_holidays_and_week-days/pls/fi/films.film_page?i_film_id=66537&i_city_id=3372&i_county_id=-1&i_where=2&i_topic_id=2 Parno Graszt:Ünnepek és Hétköznapok]</ref> Pala lengo dujto albomo, "Járom uz utam/This world was made for me" (2004), Parno Graszt avilo alosajlo andre o maj lasho 10 po "o maj lasho muzikanto le bershesko", 2005 le bershenge, katar o Shvajcicko muzikako zhurnal o "Vibrations''<ref>[http://www.hangveto.hu/eloado_item_en.php?eid=160 Parno Graszt]</ref>.
+'''Parno Graszt''' ekh muzikaki grupa katar [[Paszab]], ande [[Ungarija]], kerdjosavajli ando 1987to bersh.
+Lengo pervino albomo "Rávágok a zongorára/Hit the piano" avilo jekhali pe Lumnaki Muzkaki Karta ando Evropo ando oktombro 2002to bersh<ref>[http://www.passiondiscs.co.uk/e_pages/gypsy_e/fa-215-2.htm Parno Graszt]</ref>. Ungaricki Televizija thaj o BBC kerde ando 2004to bersh ekh dokumentarija po Parno Graszt.<ref>[http://www.port.hu/parno_graszt:unnepek_es_hetkoznapok_parno_grast:_holidays_and_week-days/pls/fi/films.film_page?i_film_id=66537&i_city_id=3372&i_county_id=-1&i_where=2&i_topic_id=2 Parno Graszt:Ünnepek és Hétköznapok]</ref> Pala lengo dujto albomo, "Járom uz utam/This world was made for me" (2004), Parno Graszt avilo alosajlo andre o maj lasho 10 po "o maj lasho muzikanto le bershesko", 2005to bersh, katar o Shvajcicko muzikako zhurnal o "Vibrations''<ref>[http://www.hangveto.hu/eloado_item_en.php?eid=160 Parno Graszt]</ref>.
 
 == Membrimos ==
 
@@ -30,3 +30,9 @@ Lengo pervino albomo "Rávágok a zongorára/Hit the piano" avilo jekhali pe Lum
 
 [[Category:Muzika ungaricki]]
 [[Category:Romane muzkake grupi]]
+
+[[de:Parno Graszt]]
+[[en:Parno Graszt]]
+[[es:Parno Graszt]]
+[[hu:Parno Graszt]]
+[[nn:Parno Graszt]]
