--- a/Parno_Graszt.mw
+++ b/Parno_Graszt.mw
@@ -20,7 +20,7 @@ Lengo pervino albomo "Rávágok a zongorára/Hit the piano" avilo jekhali pe Lum
 * ''Ez a világ nekem való'' (2007) (''This World Is Made for Me'')
 
 == References ==
-{{Reflist}}
+<references/>
 
 ==External links ==
 * [http://www.myspace.com/parnograszt MySpace sajto]
