*Empty MediaWiki Message*

--- a/Berlin.mw
+++ b/Berlin.mw
@@ -1,5 +1,5 @@
 '''Berlin''' si o [[sherutno foro]] la [[Jermaniya]]ko. Kothe jiven 3.44 miliyonurya manusha, kerindoi les o bareder foro le themesko.
-[[Chitro:Berlin-brandenburg-gate.jpg|thumb|right|200px|]]
+[[Chitro:Berlin potsdamer platz db haus atnight.jpg|thumb|right|200px|]]
 
 == Avrune phandimata ==
 * [http://www.berlin.de/english/index.html O prinjardo website le Berlinesko]
