*Empty MediaWiki Message*

--- a/Chile.mw
+++ b/Chile.mw
@@ -3,6 +3,8 @@ E '''Republika Chile''' ([[Spaniyolikanes]]: ''Chile - República de Chile'') si
 
 {{stub}}
 
+[[Shopni:Chile]]
+
 [[ab:Чили]]
 [[ace:Chili]]
 [[af:Chili]]
